--- a/starview_frontend/src/components/home/PopularNearby/styles.css
+++ b/starview_frontend/src/components/home/PopularNearby/styles.css
@@ -102,6 +102,7 @@
   min-width: 280px;
   max-width: 280px;
   scroll-snap-align: start;
+  display: flex;
 }
 
 /* Override LocationCard styles for carousel context */
@@ -109,6 +110,11 @@
   animation: none;
   width: 100%;
   max-width: 100%;
+  height: 100%;
+}
+
+.popular-nearby__card .location-card__content {
+  flex: 1;
 }
 
 /* See More card */
